--- a/temp_study.ipynb
+++ b/temp_study.ipynb
@@ -188,6 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import Annotated\n",
+    "from langchain_core.documents import Document\n",
     "from langchain_community.document_loaders import PDFPlumberLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "\n",
@@ -198,7 +200,7 @@
     "        self.k = 10\n",
     "\n",
     "    def load_documents(self, source_uris: List[str]):\n",
-    "        docs = []\n",
+    "        docs :List[Document]= []\n",
     "        for source_uri in source_uris:\n",
     "            loader = PDFPlumberLoader(source_uri)\n",
     "            docs.extend(loader.load())\n",
@@ -207,6 +209,18 @@
     "\n",
     "    def create_text_splitter(self):\n",
     "        return RecursiveCharacterTextSplitter(chunk_size=300, chunk_overlap=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf = PDFRetrievalChain([\"*.pdf\"]).create_chain()\n",
+    "\n",
+    "pdf_retriever = pdf.retriever\n",
+    "pdf_chain = pdf.chain"
    ]
   },
   {
